--- a/海面天氣預報MVC/Views/Home/Index.cshtml
+++ b/海面天氣預報MVC/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using 海面天氣預報MVC.Models
-@model IEnumerable<海面天氣預報MVC.Models.Weather>
+﻿@model IEnumerable<海面天氣預報MVC.Models.Weather>
 @{
     ViewBag.Title = "海面天氣預報";
 }
@@ -14,23 +13,24 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>*@
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script>
-        $(document).ready(function () {
-            $('#Area').change(function () {
-                var optionIndex = $("#Area option:selected").val();
-                window.location.href = "?searchString=" + optionIndex;
-            });
-        });
+                            //$(document).ready(function () {
+                            //    $('#Area').change(function () {
+                            //        var optionIndex = $("#Area option:selected").val();
+                            //        window.location.href = "?id=" + optionIndex;
+                            //    });
+                            //});
     </script>
 </head>
 <body>
     @*<p>地區：@Html.DropDownList("weather", (SelectList)ViewBag.SelectList, "請選擇海面天氣預報地區")</p>*@
-    @using (Html.BeginForm("index", "Weathers", FormMethod.Get))
+    @using (Html.BeginForm("index", "Home", FormMethod.Post))
     {
         <p>
             請選擇海面天氣預報地區:
-            @Html.DropDownList("Area", (SelectList)ViewBag.area, "請選擇", htmlAttributes: new { @class = "form-control", @selected = 1 })
+            @Html.DropDownList("Area", new SelectList(ViewBag.area, "1"), "請選擇", new { @class = "form-control" })
         </p>
 
     }
